--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/a11y": "^2.0.2",
+    "@react-three/drei": "^6.0.5",
+    "@react-three/fiber": "^7.0.1",
+    "@react-three/flex": "^0.6.0",
+    "@react-three/gltfjsx": "^4.2.2",
+    "@react-three/xr": "^3.1.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "node-sass": "4.14",
     "react": "^17.0.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.2.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
+    "react-transition-group": "^4.4.2",
+    "reactstrap": "^8.9.0",
+    "three": "^0.129.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
