--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "axios-jwt": "^1.7.1",
     "bootstrap": "^5.0.1",
+    "framer-motion": "^4.1.17",
     "node-sass": "4.14",
     "react": "^17.0.2",
     "react-animation-components": "^3.0.0",
