--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios-jwt": "^1.7.1",
     "bootstrap": "^5.0.1",
     "framer-motion": "^4.1.17",
+    "html-react-parser": "^1.2.7",
     "node-sass": "4.14",
     "react": "^17.0.2",
     "react-animation-components": "^3.0.0",
