--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-ig-feed": "^1.0.4",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
