--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "axios-jwt": "^1.7.1",
     "bootstrap": "^5.0.1",
+    "dompurify": "^2.3.0",
     "framer-motion": "^4.1.17",
     "html-react-parser": "^1.2.7",
     "node-sass": "4.14",
