--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^2.3.0",
     "framer-motion": "^4.1.17",
     "html-react-parser": "^1.2.7",
+    "mapbox-gl": "^2.3.1",
     "node-sass": "4.14",
     "react": "^17.0.2",
     "react-animation-components": "^3.0.0",
