--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-ig-feed": "^1.0.4",
+    "react-map-gl": "^6.1.16",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
