--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.11.1",
     "react-ig-feed": "^1.0.4",
     "react-map-gl": "^6.1.16",
     "react-popper": "^2.2.5",
