--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-ig-feed": "^1.0.4",
+    "react-intersection-observer": "^8.33.1",
     "react-map-gl": "^6.1.16",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
