--- a/package.json
+++ b/package.json
@@ -3,38 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/a11y": "^2.0.2",
-    "@react-three/drei": "^6.0.5",
-    "@react-three/fiber": "^7.0.1",
-    "@react-three/flex": "^0.6.0",
-    "@react-three/gltfjsx": "^4.2.2",
-    "@react-three/xr": "^3.1.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "@testing-library/react": "^13.0.0-alpha.6",
+    "@testing-library/user-event": "13.5.0",
+    "axios": "^0.26.1",
     "axios-jwt": "^1.7.1",
     "bootstrap": "^5.0.1",
     "dompurify": "^2.3.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "6.2.8",
     "html-react-parser": "^1.2.7",
     "mapbox-gl": "^2.3.1",
-    "node-sass": "4.14",
+    "node-sass": "7.0.1",
     "react": "^17.0.2",
-    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-ig-feed": "^1.0.4",
     "react-intersection-observer": "^8.33.1",
-    "react-map-gl": "^6.1.16",
+    "react-map-gl": "7.0.9",
     "react-popper": "^2.2.5",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "6.2.2",
+    "react-scripts": "5.0.0",
     "react-spring": "^9.2.3",
     "react-transition-group": "^4.4.2",
-    "reactstrap": "^8.9.0",
-    "three": "^0.129.0",
-    "web-vitals": "^1.0.1"
+    "reactstrap": "9.0.1",
+    "three": "0.138.3",
+    "user-event": "^4.0.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
