--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "matthewa",
   "version": "0.1.0",
   "private": true,
+  "license": "unlicense",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^13.0.0-alpha.6",
