Fixed errors and removed abandoned packages from project

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "matthewa",
+  "author": "Matt Andrews",
+  "email": "matt@carbonbasedcreative.com",
   "version": "0.1.0",
   "private": true,
   "license": "unlicense",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^13.0.0-alpha.6",
+    "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "axios": "^0.26.1",
     "axios-jwt": "^1.7.1",
@@ -17,8 +19,7 @@
     "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.11.1",
-    "react-ig-feed": "^1.0.4",
+    "react-hook-form": "7.28.0",
     "react-intersection-observer": "^8.33.1",
     "react-map-gl": "7.0.9",
     "react-popper": "^2.2.5",
