--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Carbonbased Creative Portfolio",
+  "name": "Carbonbased-Creative-Portfolio",
   "author": "Matt Andrews",
   "email": "matt@carbonbasedcreative.com",
   "version": "0.1.0",
